# bgp-lg-mcp

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  README.md  ROUTE_SERVERS_ANALYSIS.md  bgp_client.py  bgp_lg.py  bgpkit_client.py  config.json  connection_pool.py  generate_cert.sh  models.py  pyproject.toml  requirements.txt  route_servers_test_results.json  server.py  session_manager.py  start-server.sh  startup.sh  test_asn_lookup.py  test_integration_routeviews.py  test_ip_lookup.py  test_models.py  test_quick.py  test_route_lookup.py  test_telnet_interactive.py  validate_server_capabilities.py  validation.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
