[project]
name = "bgp-lg-mcp"
version = "0.1.0"
description = "BGP Looking Glass MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "server.py",
    "bgp_lg.py",
    "config.json",
]

[project.scripts]
bgp-lg-mcp = "server:run_http_server"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require network access (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
